--- a/com.skyestock.configcenter/pom.xml
+++ b/com.skyestock.configcenter/pom.xml
@@ -8,25 +8,25 @@
         <version>2.0.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.skystock</groupId>
-    <artifactId>platform</artifactId>
+    <groupId>com.skyestock</groupId>
+    <artifactId>configcenter</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>platform</name>
-    <description>Demo project for Spring Boot</description>
+    <name>configcenter</name>
+    <description>config</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
 
-
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
+            <version>2.0.0.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
@@ -35,27 +35,18 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.alibaba.otter</groupId>
-            <artifactId>canal.client</artifactId>
-            <version>1.1.4</version>
-        </dependency>
-
-
-<!--        日志、链路追踪-->
-        <dependency>
-            <groupId>com.plumelog</groupId>
-            <artifactId>plumelog-logback</artifactId>
-            <version>3.4.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.skywalking</groupId>
-            <artifactId>apm-toolkit-trace</artifactId>
-            <version>6.5.0</version>
-        </dependency>
-
-
     </dependencies>
+<!--    <dependencyManagement>-->
+<!--        <dependencies>-->
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.cloud</groupId>-->
+<!--                <artifactId>spring-cloud-dependencies</artifactId>-->
+<!--                <version>Finchley.RELEASE</version>-->
+<!--            </dependency>-->
+<!--        </dependencies>-->
+<!--    </dependencyManagement>-->
+
+
 
     <build>
         <plugins>
