--- a/com.skyestock.registry/pom.xml
+++ b/com.skyestock.registry/pom.xml
@@ -8,25 +8,18 @@
         <version>2.0.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.skystock</groupId>
-    <artifactId>platform</artifactId>
+    <groupId>com.skyestock</groupId>
+    <artifactId>registry</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>platform</name>
-    <description>Demo project for Spring Boot</description>
+    <name>registry</name>
+    <description>注册中心</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
-
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
@@ -36,24 +29,16 @@
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba.otter</groupId>
-            <artifactId>canal.client</artifactId>
-            <version>1.1.4</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <version>2.0.3.RELEASE</version>
         </dependency>
 
-
-<!--        日志、链路追踪-->
         <dependency>
-            <groupId>com.plumelog</groupId>
-            <artifactId>plumelog-logback</artifactId>
-            <version>3.4.2</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.0.0.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.skywalking</groupId>
-            <artifactId>apm-toolkit-trace</artifactId>
-            <version>6.5.0</version>
-        </dependency>
-
 
     </dependencies>
 
