--- a/com.skyestock.platform/pom.xml
+++ b/com.skyestock.platform/pom.xml
@@ -42,6 +42,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.2.3</version>
+        </dependency>
+
+
 <!--        日志、链路追踪-->
         <dependency>
             <groupId>com.plumelog</groupId>
