--- a/com.skyestock.registry/src/main/resources/bootstrap.yml
+++ b/com.skyestock.registry/src/main/resources/bootstrap.yml
@@ -5,8 +5,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-#    service-url:
-#      defaultZone:
+    service-url:
+      defaultZone: http://127.0.0.1:7099/eureka
 
 
 
